fixed flickering bug with loading users previous theme from local storage. fixed bug where dark mode slider btn goes bak to default postion when page is reloaded even when styles have been loaded succesfully from local storage. added functionality that removes the dark mode style obj from local storage when the user turns off dark mode

--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
     --dark-mode-secondary-color:#fff;
 }
 
+
+
+
 /* ========CSS RESET=========== */
 /*
   1. Use a more-intuitive box-sizing model.
@@ -66,6 +69,9 @@
     isolation: isolate;
   }
 
+
+
+
 /* ======== TYPOGRAPHY =========== */
   h1, h2, h3, h4, h5, h6 {
     font-family: "Kanit", sans-serif;
@@ -89,10 +95,10 @@ body{
     background-image: url("/assets/img/wave-bg-light.svg");
     background-size: cover;
     background-repeat: no-repeat;
-    /* background-attachment: fixed; */
     background-color:var(--primary-color);
     transition: all 300ms linear;
- 
+    visibility: hidden;
+    display: none;
   }
 
  header{
@@ -151,138 +157,150 @@ body{
     transition: all 300ms linear;
 }
 
-/*******JS styles*******/
+/*******submit button styles*******/
+/* From Uiverse.io by catraco */ 
+.btn-class-name {
+  --primary: 255, 90, 120;
+  --secondary: 150, 50, 60;
+  width: 60px;
+  height: 50px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  user-select: none;
+  touch-action: manipulation;
+  outline: 10px solid rgb(var(--primary), .5);
+  border-radius: 100%;
+  position: relative;
+  transition: .3s;
+}
+
+.btn-class-name .back {
+  background: rgb(var(--secondary));
+  border-radius: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.btn-class-name .front {
+  background: linear-gradient(0deg, rgba(var(--primary), .6) 20%, rgba(var(--primary)) 50%);
+  box-shadow: 0 .5em 1em -0.2em rgba(var(--secondary), .5);
+  border-radius: 100%;
+  position: absolute;
+  border: 1px solid rgb(var(--secondary));
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  font-weight: 600;
+  font-family: inherit;
+  transform: translateY(-15%);
+  transition: .15s;
+  color: rgb(var(--secondary));
+}
+
+.btn-class-name:active .front {
+  transform: translateY(0%);
+  box-shadow: 0 0;
+}
+
+/*******Dark mode/light mode slider styles*******/
+/* From Uiverse.io by cuzpq */ 
+.theme-checkbox {
+  --toggle-size: 16px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 6.25em;
+  height: 3.125em;
+  background: -webkit-gradient(linear, left top, right top, color-stop(50%, #efefef), color-stop(50%, #2a2a2a)) no-repeat;
+  background: -o-linear-gradient(left, #efefef 50%, #2a2a2a 50%) no-repeat;
+  background: linear-gradient(to right, #efefef 50%, #2a2a2a 50%) no-repeat;
+  background-size: 205%;
+  background-position: 0;
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
+  border-radius: 99em;
+  position: relative;
+  cursor: pointer;
+  font-size: var(--toggle-size);
+}
+
+.theme-checkbox::before {
+  content: "";
+  width: 2.25em;
+  height: 2.25em;
+  position: absolute;
+  top: 0.438em;
+  left: 0.438em;
+  background: -webkit-gradient(linear, left top, right top, color-stop(50%, #efefef), color-stop(50%, #2a2a2a)) no-repeat;
+  background: -o-linear-gradient(left, #efefef 50%, #2a2a2a 50%) no-repeat;
+  background: linear-gradient(to right, #efefef 50%, #2a2a2a 50%) no-repeat;
+  background-size: 205%;
+  background-position: 100%;
+  border-radius: 50%;
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.theme-checkbox:checked::before {
+  left: calc(100% - 2.25em - 0.438em);
+  background-position: 0;
+}
+
+.theme-checkbox:checked {
+  background-position: 100%;
+}
+
+
+/* using transform to reduce the size of dark mode slider */
+.mode-btn{
+  transform: scale(0.7);
+}
+
+
+/* ======== JS STYLES =========== */
+/* adds visibility and adds the body element back to the layout */
+.show-body{
+  visibility: visible;
+  display: block;
+}
+
+/* toggles visibility on reset btn, results component */
 .show {
     visibility: visible;
 }
 
 
 /*****Dark theme JS Classes *****/
-
+/* dark mode style for background imag on the body element */
 .dark-bg-img{
     background-image: url("/assets/img/wave-bg-dark.svg");
     background-color: var(--dark-mode-primary-color);
 }
-
+/* dark mode style for header element */
 .dark-header{
     background-color: var(--dark-mode-primary-color);
 }
-
+/* dark mode style for card element*/
 .dark-card{
     background-color: var(--dark-mode-card-color)!important;
     color: var(--dark-mode-secondary-color)!important;
 }
-
+/* dark mode style for reset btn */
 .dark-reset-btn{
     background-color: var(--dark-mode-secondary-color)!important;
     color: var(--dark-mode-primary-color)!important;
 }
 
 
-/*******submit button styles*******/
-/* From Uiverse.io by catraco */ 
-.btn-class-name {
-    --primary: 255, 90, 120;
-    --secondary: 150, 50, 60;
-    width: 60px;
-    height: 50px;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    user-select: none;
-    touch-action: manipulation;
-    outline: 10px solid rgb(var(--primary), .5);
-    border-radius: 100%;
-    position: relative;
-    transition: .3s;
-  }
-  
-  .btn-class-name .back {
-    background: rgb(var(--secondary));
-    border-radius: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .btn-class-name .front {
-    background: linear-gradient(0deg, rgba(var(--primary), .6) 20%, rgba(var(--primary)) 50%);
-    box-shadow: 0 .5em 1em -0.2em rgba(var(--secondary), .5);
-    border-radius: 100%;
-    position: absolute;
-    border: 1px solid rgb(var(--secondary));
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-    font-weight: 600;
-    font-family: inherit;
-    transform: translateY(-15%);
-    transition: .15s;
-    color: rgb(var(--secondary));
-  }
-  
-  .btn-class-name:active .front {
-    transform: translateY(0%);
-    box-shadow: 0 0;
-  }
 
-/*******Dark mode/light mode button styles*******/
-/* From Uiverse.io by cuzpq */ 
-.theme-checkbox {
-    --toggle-size: 16px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    width: 6.25em;
-    height: 3.125em;
-    background: -webkit-gradient(linear, left top, right top, color-stop(50%, #efefef), color-stop(50%, #2a2a2a)) no-repeat;
-    background: -o-linear-gradient(left, #efefef 50%, #2a2a2a 50%) no-repeat;
-    background: linear-gradient(to right, #efefef 50%, #2a2a2a 50%) no-repeat;
-    background-size: 205%;
-    background-position: 0;
-    -webkit-transition: 0.4s;
-    -o-transition: 0.4s;
-    transition: 0.4s;
-    border-radius: 99em;
-    position: relative;
-    cursor: pointer;
-    font-size: var(--toggle-size);
-  }
-  
-  .theme-checkbox::before {
-    content: "";
-    width: 2.25em;
-    height: 2.25em;
-    position: absolute;
-    top: 0.438em;
-    left: 0.438em;
-    background: -webkit-gradient(linear, left top, right top, color-stop(50%, #efefef), color-stop(50%, #2a2a2a)) no-repeat;
-    background: -o-linear-gradient(left, #efefef 50%, #2a2a2a 50%) no-repeat;
-    background: linear-gradient(to right, #efefef 50%, #2a2a2a 50%) no-repeat;
-    background-size: 205%;
-    background-position: 100%;
-    border-radius: 50%;
-    -webkit-transition: 0.4s;
-    -o-transition: 0.4s;
-    transition: 0.4s;
-  }
-  
-  .theme-checkbox:checked::before {
-    left: calc(100% - 2.25em - 0.438em);
-    background-position: 0;
-  }
-  
-  .theme-checkbox:checked {
-    background-position: 100%;
-  }
-
-  .mode-btn{
-    transform: scale(0.7);
-  }
